Saved the project from utter destruction